[gd_scene load_steps=8 format=3 uid="uid://cqxtc6fkyicnd"]

[ext_resource type="Script" uid="uid://cr5ea4kw8p4gp" path="res://scripts/game_manager.gd" id="1_jyhfs"]
[ext_resource type="PackedScene" uid="uid://bcdj31cplynon" path="res://scenes/clicker_button.tscn" id="1_o5qli"]
[ext_resource type="PackedScene" uid="uid://df1oimf886234" path="res://scenes/upgrade_item.tscn" id="2_0wfyh"]
[ext_resource type="LabelSettings" uid="uid://b64bdumv2qjo3" path="res://assets/label_settings_title.tres" id="2_sugp2"]
[ext_resource type="StyleBox" uid="uid://dd2260bp2eese" path="res://assets/style_box_flat_button.tres" id="4_tbgi4"]
[ext_resource type="Script" uid="uid://bn8icalt3qu8k" path="res://scripts/quantity_selector_button.gd" id="5_tefeu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tefeu"]
content_margin_left = 8.0
content_margin_top = 0.0
content_margin_right = 8.0
content_margin_bottom = 0.0

[node name="Main" type="Node2D"]
script = ExtResource("1_jyhfs")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameBackground" type="ColorRect" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.392157, 0.352941, 0.627451, 1)

[node name="ScoreLabel" type="Label" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 10.0
offset_right = 20.0
offset_bottom = 87.0
grow_horizontal = 2
text = "0"
label_settings = ExtResource("2_sugp2")

[node name="ClickerControl" type="Control" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ClickerButton" parent="CanvasLayer/UI/ClickerControl" instance=ExtResource("1_o5qli")]
layout_mode = 1
mouse_default_cursor_shape = 2
action_mode = 0

[node name="UpgradeControl" type="Control" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -480.0
offset_top = -2.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 2

[node name="UpgradeBackground" type="ColorRect" parent="CanvasLayer/UI/UpgradeControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -3.0
offset_right = 3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.156863, 0.156863, 0.156863, 1)

[node name="UpgradeVbox" type="VBoxContainer" parent="CanvasLayer/UI/UpgradeControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="UpgradeTitle" type="Label" parent="CanvasLayer/UI/UpgradeControl/UpgradeVbox"]
custom_minimum_size = Vector2(0, 96)
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 40
text = "Upgrades"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradePanelContainer" type="PanelContainer" parent="CanvasLayer/UI/UpgradeControl/UpgradeVbox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_tefeu")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI/UpgradeControl/UpgradeVbox/UpgradePanelContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="QuantitySelectorButton" type="Button" parent="CanvasLayer/UI/UpgradeControl/UpgradeVbox/UpgradePanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 48)
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = ExtResource("4_tbgi4")
text = "Ã—1"
script = ExtResource("5_tefeu")

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/UI/UpgradeControl/UpgradeVbox/UpgradePanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI/UpgradeControl/UpgradeVbox/UpgradePanelContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AutoClickItem" parent="CanvasLayer/UI/UpgradeControl/UpgradeVbox/UpgradePanelContainer/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("2_0wfyh")]
layout_mode = 2

[node name="ClickPowerItem" parent="CanvasLayer/UI/UpgradeControl/UpgradeVbox/UpgradePanelContainer/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("2_0wfyh")]
layout_mode = 2
